--- a/src/Asuka/Asuka.vcproj
+++ b/src/Asuka/Asuka.vcproj
@@ -5,10 +5,6 @@
 	Name="Asuka"
 	ProjectGUID="{6AA99A18-196F-4334-A3DE-D9EEA62CD5E9}"
 	RootNamespace="Asuka"
-	SccProjectName="SAK"
-	SccAuxPath="SAK"
-	SccLocalPath="SAK"
-	SccProvider="SAK"
 	>
 	<Platforms>
 		<Platform
@@ -51,7 +47,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="h,..\h,res"
+				AdditionalIncludeDirectories="h;..\h;res;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="NDEBUG;WIN32;_CONSOLE;WIN32_LEAN_AND_MEAN;VC_EXTRALEAN;NOMINMAX"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -77,7 +73,7 @@
 				AdditionalDependencies="system.lib dxguid.lib"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="$(VDLibPath)"
+				AdditionalLibraryDirectories="&quot;$(VDLibPath)&quot;;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86&quot;"
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -229,7 +225,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="h,..\h,res"
+				AdditionalIncludeDirectories="h;..\h;res;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_CONSOLE;WIN32_LEAN_AND_MEAN;VC_EXTRALEAN;NOMINMAX"
 				StringPooling="true"
 				MinimalRebuild="true"
@@ -256,7 +252,7 @@
 				AdditionalDependencies="system.lib dxguid.lib"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="$(VDLibPath)"
+				AdditionalLibraryDirectories="&quot;$(VDLibPath)&quot;;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86&quot;"
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				SubSystem="1"
