--- a/src/Tessa/Tessa.vcproj
+++ b/src/Tessa/Tessa.vcproj
@@ -5,10 +5,6 @@
 	Name="Tessa"
 	ProjectGUID="{81ADB599-84B5-4FF3-B781-FB39D5CC63EE}"
 	RootNamespace="Tessa"
-	SccProjectName="SAK"
-	SccAuxPath="SAK"
-	SccLocalPath="SAK"
-	SccProvider="SAK"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -49,7 +45,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\h,.\res"
+				AdditionalIncludeDirectories=".\h;.\res;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -179,7 +175,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".\h,.\res"
+				AdditionalIncludeDirectories=".\h;.\res;&quot;F:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
